Dark mode invis button in wrong location fix

--- a/home_responsive.css
+++ b/home_responsive.css
@@ -9,6 +9,7 @@
 }
 
 .logo-container-2 {
+    top: 0;
     opacity: 0;
 }
 
